--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,14 @@ h3{
   font-family: Avenir Light;
   font-size: 21;
 }
+body{
+  margin:0;
+  padding: 0;
+}
 #logo{
-  max-width: 300;
-  height:auto;
+  max-width: 25rem;
+  max-height: 25rem;
+  height: auto;
   width:100%;
 }
 #content-wrapper{
@@ -43,7 +48,8 @@ h3{
   background-color: rgba(22,38,41,.79);
 }
 #input-email{
-  width: 400px;
+  width:100%;
+  max-width: 400px;
   padding: 12px 12px;
   box-sizing: border-box;
   font-family: Aleo Light;
@@ -103,4 +109,237 @@ input.button{
 .fifty-percent{
   float:left;
   width:50%;
+}
+
+/*Hamburger Menu*/
+.header{
+  position:fixed;
+  top:0;
+  left:0;
+	width:100%;
+	background:#1d1f20;
+	height:60px;
+	line-height:60px;
+  display: none;
+}
+.hamburger{
+  display: none;
+  background:none;
+  position:absolute;
+  top:0;
+  right:0;
+  line-height:45px;
+  padding:5px 15px 0px 15px;
+  color:#fff;
+  border:0;
+  font-size:1.4em;
+  font-weight:bold;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.cross{
+  display: none;
+  background:none;
+  position:absolute;
+  top:0px;
+  right:0;
+  padding:13px 15px 0px 15px;
+  color:#fff;
+  border:0;
+  font-size:3em;
+  line-height:65px;
+  font-weight:bold;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.menu{
+  display: none;
+  top:60px;
+  z-index:1000000;
+  font-weight:bold;
+  font-size:0.8em;
+  width:100%;
+  background:#131313;
+  position:fixed;
+  text-align:center;
+}
+.menu ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  list-style-image: none;
+}
+.menu li {
+  font-family: Aleo Light;
+  display: block;
+  padding:15px 0 15px 0;
+  border-bottom:#1d1f20 1px solid;}
+.menu li:hover{
+  display: block;
+  background:#181818;
+  padding:15px 0 15px 0;
+  border-bottom:#1d1f20 1px solid;}
+.menu ul li a {
+  text-decoration:none;
+  margin: 0px;
+  color:#fff;
+}
+.menu ul li a:hover {
+  color: #fff;
+  text-decoration:none;
+}
+.menu a{
+  text-decoration:none;
+  color:white;
+}
+.menu a:hover{
+  text-decoration:none;
+  color:white;
+}
+
+.glyphicon-home{
+  color:white;
+  font-size:1.5em;
+  margin-top:5px;
+  margin:0 auto;
+}
+/*Sick hamburger menu*/
+/* Icon 1 */
+
+#nav-icon2{
+  width: 45px;
+  height: 45px;
+  position: fixed;
+  top:0;
+  right:0;
+  margin: 12;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+/* Icon 2 */
+
+#nav-icon2 {
+}
+
+#nav-icon2 span {
+  display: block;
+  position: absolute;
+  height: 7px;
+  width: 50%;
+  background: #d3531a;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon2 span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+#nav-icon2 span:nth-child(odd) {
+  left:1px;
+  border-radius: 9px 0 0 9px;
+}
+
+#nav-icon2 span:nth-child(1), #nav-icon2 span:nth-child(2) {
+  top: 0px;
+}
+
+#nav-icon2 span:nth-child(3), #nav-icon2 span:nth-child(4) {
+  top: 13px;
+}
+
+#nav-icon2 span:nth-child(5), #nav-icon2 span:nth-child(6) {
+  top: 26px;
+}
+
+#nav-icon2.open span:nth-child(1),#nav-icon2.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon2.open span:nth-child(2),#nav-icon2.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon2.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(5) {
+  left: 5px;
+  top: 20px;
+}
+
+#nav-icon2.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 20px;
+}
+
+
+@media only screen and (max-width: 768px){
+  #logo{
+    max-width: 15rem;
+    max-height: 15rem;
+    height: auto;
+    width:100%;
+  }
+  #opaque-wrapper{
+    margin-top: 50px;
+  }
+  .menu, .cross, .hamburger, .header{
+    display: block;
+  }
+  .fifty-percent{
+    float:left;
+    width:100%;
+  }
+  .button{
+    margin:auto;
+    display: none;
+  }
+  input.button{
+    display: block;
+    margin:auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
 }
