--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,15 @@ body{
   margin:0;
   padding: 0;
 }
+a {
+  color: #fa9f3a;
+  text-decoration: none;
+}
+a:hover {
+  color: #CBF2FF;
+  text-decoration: none;
+}
+
 #logo{
   max-width: 25rem;
   max-height: 25rem;
@@ -41,8 +50,9 @@ body{
 }
 #nav-bar-wrapper{
   width:100%;
+  margin: 75px 10px 75px 10px;
 }
-#opaque-wrapper{
+.opaque-wrapper{
   float:left;
   width:100%;
   background-color: rgba(22,38,41,.79);
@@ -71,11 +81,11 @@ body{
   text-decoration: none;
   background-color: rgba(22,38,41,.79);
   color: #FA9F3A;
-  margin: 75px 10px 75px 10px;
+  margin: 10px 10px 10px 10px;
   padding: 10px 0px 10px 0px;
   border:none;
   display: inline-block;
-  width: 225px;
+  width: 260px;
 }
 input.button{
   font-size:30;
@@ -100,12 +110,52 @@ input.button{
   font-size: 27;
   color: #fa9f3a;
 }
+
+.row {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .content-images{
-  width:100%;
+  width: 100%;
 }
+
+.recruiter-images{
+  width: 90%;
+  margin: 50px 10px;
+}
+
+.api-images{
+  width: 60%;
+  margin: 30px 10px;
+}
+
+.starter-images{
+  width: 40%;
+  margin: 30px 30px;
+}
+
+.social-media-images {
+  width: 6%;
+  margin: 30px 10px;
+}
+
 .heading{
-  color:white;
+  color: white;
 }
+
+.contact {
+  padding-top: 50px;
+  color: white;
+  text-align: center;
+}
+
+.copyright {
+  padding-top: 50px;
+  color: white;
+  font-family: Avenir Light;
+}
+
 .fifty-percent{
   float:left;
   width:50%;
@@ -314,6 +364,16 @@ input.button{
   top: 20px;
 }
 
+#contact {
+  width: inherit;
+  text-align: center;
+}
+
+#contact-inside {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
 
 @media only screen and (max-width: 768px){
   #logo{
@@ -322,7 +382,7 @@ input.button{
     height: auto;
     width:100%;
   }
-  #opaque-wrapper{
+  .opaque-wrapper{
     margin-top: 50px;
   }
   .menu, .cross, .hamburger, .header{
