--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,13 @@ input.button{
   text-align: center;
 }
 
+canvas {
+  position:absolute;
+  left:0;
+  top:0;
+  z-index:-1;
+}
+
 @media only screen and (max-width: 768px){
   #logo{
     max-width: 15rem;
